--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
     <main>
         <div id="bg"></div>
         <h1>contact.</h1>
-        <h1 style="font-size: 200%; position: absolute; top: 0px; margin-top: 20vw;">for normal inquiries:</h1>
+        <h1 style="font-size: 200%; position: absolute; top: 0px; margin-top: 20vw;">by emails:</h1>
+        <p style="text-align: left;">lumiscapeid@gmail.com (for general inquiries)<br>lumiwrks@gmail.com (for label inquiries)</p>
     </main>
 
     <footer>
