--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           document.write(`${romanYear}`);
           </script>
           
-          <br>Blasius N. Marvin | zonemusic401@gmail.com
+          <br>Project by Blasius Nafiri Marvin
                 <br>All rights reserved, <a href="https://arvdevable.github.io/licenses">usage guidelines</a>.<br>
         </p>
         </div>
